Fix weird text-shifting in navbar when translations are applied...
**THE ISSUE:**
Once a language is selected, Google tranlate wraps all page text elements in <font> tags as shown below:

```html
<!-- Prior to Google Translation -->
<h2>Some heading</h2>

<!-- After translations are applied -->
<h2>
  <font style="vertical-align: inherit;">Some heading translated</font>
</h2>
```

The main heading used in our navbar (w/ class="typography__nav-heading") had it's vertical-align set to middle...
This was causing strange alignment of the nested font tags becuase they have 'vertical-align: inherit;'.

**THE SOLUTION:**

Deleted the following line from the `.typography__nav-heading` rules.

```css
.typography__nav-heading {
  // ... rules...
  vertical-align: middle;
  // ... more rules...
}
```

--- a/assets/scss/1-base/_typography.scss
+++ b/assets/scss/1-base/_typography.scss
@@ -10,7 +10,6 @@ body {
 
 // h1 is KCC's logo-font, reserved for the nav-local's page-title heading.
 .typography__nav-heading { // Not to be used for page content
-  align-self: center;
   color: $primary-blue;
   display: inline;
   font-family: $font-family-kcc;
@@ -18,7 +17,6 @@ body {
   font-style: italic;
   font-weight: 700;
   text-transform: uppercase;
-  vertical-align: middle;
   transition-property: color;
   transition-timing-function: ease;
   transition-duration: .4s;
